Fix overflow of long words outside of their container

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,6 +13,18 @@ body {
   padding-bottom: 12rem;
 }
 
+.form-check > label {
+  max-width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+.review-answers {
+  max-width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 .form-check {
   position: relative;
   padding: 10px 0 10px 40px;
